# chroma

./: AGENT.md  INTEGRATION.md  README.md
chromadb_intelligence/: __init__.py  cli.py  core.py  pyproject.toml  test_intelligence.py
eisenstein_index/: README.md  __init__.py  bench.py  hex_ann.py  lattice.py
eisenstein_index/tests/: test_eisenstein_index.py
memory/: JOURNAL.md
rust/sysdb/src/: test_sysdb.rs
rust/types/src/: segment.rs
rust/worker/src/execution/orchestration/: async_function_boundary.rs  attached_function_orchestrator.rs
